--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -76,7 +76,7 @@
             </div>
         </div>
 -->
-        <h1>C# projects</h1>
+        <h1 id="feature">C# projects</h1>
         <div class="projects-container">
             <div class="project dark">
                 <div class="description">
