--- a/portfolio/aboutme.html
+++ b/portfolio/aboutme.html
@@ -57,8 +57,8 @@
         </section>
 
         <div class="legend">
-            <i class="fas fa-unlock"> - Learned</i>
-            <i class="fas fa-lock"> - Learning</i>
+            <div><i class="fas fa-unlock"></i> - Learned</div>
+            <div><i class="fas fa-lock"></i> - Learning</div>
         </div>
 
         <section class="skill-el">
